feat: qualify fixed-step simulation end to end